--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<script>
+setTimeout(function(){
+   window.location.reload(1);
+}, 5000);
+</script>
 <body>
 <div>
   test
