--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <script>
+    var data = <%- data %>;
+   console.log(data);
+   
 setTimeout(function(){
    window.location.reload(1);
-}, 5000);
+}, 15000);
 </script>
 <body>
 <div>
