--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-    var data = <%- data %>;
+   var data = "test data";
    console.log(data);
    
 setTimeout(function(){
