--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <script>
-   var data = "test data";
-   console.log(data);
-   
 setTimeout(function(){
    window.location.reload(1);
 }, 15000);
 </script>
 <body>
 <div>
-  test
+  <%= data %>
 </div>
 </body>
 </html>
